--- a/array_and_ashing/medium/36.ipynb
+++ b/array_and_ashing/medium/36.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,24 @@
     "## Second solution using hashset\n",
     "class Solution:\n",
     "    def isValidSudoku(self, board: List[List[str]]) -> bool:\n",
-    "        cols = collections.defaultdict(set)\n",
+    "        cols = collections.defaultdict(set) #key: col, value: set of numbers\n",
+    "        rows = collections.defaultdict(set) #key: row, value: set of numbers\n",
+    "        squares = collections.defaultdict(set) # key = (row/3, col/3), value = set of numbers\n",
+    "\n",
+    "        for r in range(9):\n",
+    "            for c in range(9):\n",
+    "                if board[r][c] != \".\":\n",
+    "                    continue\n",
+    "                if (board[r][c] in rows[r] or\n",
+    "                    board[r][c] in cols[c] or\n",
+    "                    board[r][c] in squares[(r//3, c//3)]):\n",
+    "                    return False\n",
+    "                \n",
+    "                cols[c].add(board[r][c])\n",
+    "                rows[r].add(board[r][c])\n",
+    "                squares[(r//3, c//3)].add(board[r][c])\n",
+    "        return True\n",
+    "\n",
     "\n"
    ]
   },
