--- a/02_Two_Pointers/Medium/15.ipynb
+++ b/02_Two_Pointers/Medium/15.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,7 @@
     "                    res.append([a, nums[l], nums[r]])\n",
     "                    while  l < r and nums[l] == nums[l-1]:\n",
     "                        l += 1\n",
-    "        return res\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "        return res\n"
    ]
   }
  ],
