--- a/05_Binary_Search/74.ipynb
+++ b/05_Binary_Search/74.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "        return False\n",
     "\n",
     "    def searchMatrix(self, matrix: List[List[int]], target: int) -> bool:\n",
-    "       rows, cols = len(matrix), len(matrix[0])\n",
+    "       row, cols = len(matrix), len(matrix[0])\n",
     "\n",
     "       for row in matrix:\n",
     "            if row[-1] >= target:\n",
@@ -45,18 +45,6 @@
     "                    return True\n",
     "                else:\n",
     "                    return False\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix = [[1,3,5,7],[10,11,16,20],[23,30,34,60]]\n",
-    "target = 34\n",
-    "\n",
-    "print(Solution().searchMatrix(matrix, target))\n"
    ]
   }
  ],
