new problems on backtraking, heaps and graphs

--- a/09_Heap/703.ipynb
+++ b/09_Heap/703.ipynb
@@ -4,42 +4,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://i.imgur.com/Vy27xdQ.png)"
+    "![](https://i.imgur.com/sYJBgYG.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definition for a binary tree node.\n",
-    "class TreeNode:\n",
-    "    def __init__(self, val=0, left=None, right=None):\n",
-    "        self.val = val\n",
-    "        self.left = left\n",
-    "        self.right = right"
+    "import heapq\n",
+    "from typing import List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':\n",
-    "        curr = root\n",
-    "        while curr:\n",
-    "            if p.val > curr.val and q.val > curr.val:\n",
-    "                curr = curr.right\n",
-    "            elif p.val < curr.val and q.val < curr.val:\n",
-    "                curr = curr.left\n",
-    "            else:\n",
-    "                return curr\n",
-    "                \n",
+    "class KthLargest:\n",
+    "    def __init__(self, k: int, nums: List[int]):\n",
+    "        # minHeap w/ K largest integers\n",
+    "        self.minHeap, self.k = nums, k\n",
+    "        heapq.heapify(self.minHeap)\n",
+    "        while len(self.minHeap) > k:\n",
+    "            heapq.heappop(self.minHeap)\n",
     "\n",
-    "        "
+    "    def add(self, val: int) -> int:\n",
+    "        heapq.heappush(self.minHeap, val)\n",
+    "        if len(self.minHeap) > self.k:\n",
+    "            heapq.heappop(self.minHeap)\n",
+    "        return self.minHeap[0]"
    ]
   }
  ],
