--- a/02_Two_Pointers/167.ipynb
+++ b/02_Two_Pointers/167.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://i.imgur.com/9b0fcVk.png)"
+    "![](https://i.imgur.com/oYFVcs9.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,22 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "    def twoSum(self, numbers: List[int], target: int) -> List[int]:\n",
+    "        l, r = 0, len(numbers) - 1\n",
     "\n",
-    "        res = 0\n",
-    "\n",
-    "        l = 0\n",
-    "        for r in range(l, len(prices)):\n",
-    "            if prices[r] < prices[l]:\n",
-    "                l = r\n",
-    "            res = max(res, prices[r] - prices[l])\n",
-    "        return res\n",
-    "        "
+    "        while l < r:\n",
+    "            curSum = numbers[l] + numbers[r]\n",
+    "            if curSum == target:\n",
+    "                return [l + 1, r + 1]\n",
+    "            elif curSum < target:\n",
+    "                l += 1\n",
+    "            elif curSum > target:\n",
+    "                r -= 1\n",
+    "            else:\n",
+    "                return [l+1, r+1]        "
    ]
   }
  ],
