--- a/03_Sliding_Window/76.ipynb
+++ b/03_Sliding_Window/76.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,20 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'BANC'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def minWindow(self, s: str, t: str) -> str:\n",
@@ -50,18 +39,25 @@
     "                    res = s[l:r]\n",
     "                s_counter[s[l]] -= 1\n",
     "                l += 1\n",
-    "        return res\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "        return res\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BANC'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = \"ADOBECODEBANC\"\n",
     "t = \"ABC\"\n",
