--- a/04_Stack/20.ipynb
+++ b/04_Stack/20.ipynb
@@ -14,18 +14,21 @@
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def isValid(self, s: str) -> bool:\n",
-    "        Map = {')':'(', ']':'[', '}':'{'}\n",
+    "    def isValid(self, s: str) -> bool: # O(n) in space e memory\n",
     "        stack = []\n",
-    "        for i in s:\n",
-    "            if i not in Map:\n",
-    "                stack.append(i)\n",
+    "        map = {')':'(',']':'[','}':'{'}\n",
+    "\n",
+    "        for c in s:\n",
+    "            if c not in map: # so it's a opening parenthesis\n",
+    "                stack.append(c)\n",
     "                continue\n",
-    "            if not stack or stack[-1] != Map[i]:\n",
+    "            if not stack and stack[-1] != map[c]: # there is no closing match to a parenthesis\n",
     "                return False\n",
     "            stack.pop()\n",
     "\n",
-    "        return not stack"
+    "        return not stack\n",
+    "\n",
+    "\n"
    ]
   }
  ],
