--- a/04_Stack/84.ipynb
+++ b/04_Stack/84.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://i.imgur.com/2eJK1Le.png)"
+    "![](https://i.imgur.com/JE3RiJO.png)"
    ]
   },
   {
@@ -23,16 +23,22 @@
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def dailyTemperatures(self, temperatures: List[int]) -> List[int]:\n",
-    "        res = [0] * len(temperatures)\n",
-    "        stack = []  # pair: [temp, index]\n",
+    "    def largestRectangleArea(self, heights: List[int]) -> int:\n",
+    "        stack = [] # (index, height)\n",
+    "        max_area = 0\n",
     "\n",
-    "        for i, t in enumerate(temperatures):\n",
-    "            while stack and t > stack[-1][0]: # is the temperature greater then the top element of our stack? (the last one added)\n",
-    "                stackT, stackInd = stack.pop()\n",
-    "                res[stackInd] = i - stackInd #numbers of days that took us \n",
-    "            stack.append((t, i))\n",
-    "        return res"
+    "        for i, h in enumerate(heights):\n",
+    "            start = i\n",
+    "            while stack and stack[-1][1] > h:\n",
+    "                index, height = stack.pop()\n",
+    "                max_area = max(max_area, (i - index) * height)\n",
+    "                start = index\n",
+    "            stack.append((start, h))\n",
+    "\n",
+    "        for i,h in stack:\n",
+    "            max_area = max(max_area, (len(heights) - i) * h)\n",
+    "        \n",
+    "        return max_area     "
    ]
   }
  ],
