--- a/06_LinkedList/206.ipynb
+++ b/06_LinkedList/206.ipynb
@@ -9,12 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Optional\n",
-    "\n",
     "class ListNode:\n",
     "    def __init__(self, val=0, next=None):\n",
     "        self.val = val\n",
@@ -29,13 +27,14 @@
     "            curr.next = prev\n",
     "            prev = curr\n",
     "            curr = temp\n",
-    "        return prev"
+    "        return prev\n",
+    "        # O(n) time | O(1) space"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -49,12 +48,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
