--- a/07_Trees/110.ipynb
+++ b/07_Trees/110.ipynb
@@ -4,16 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://i.imgur.com/Vy27xdQ.png)"
+    "![](https://i.imgur.com/gMMfWBc.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definition for a binary tree node.\n",
+    "from typing import Optional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class TreeNode:\n",
     "    def __init__(self, val=0, left=None, right=None):\n",
     "        self.val = val\n",
@@ -23,21 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Definition for a binary tree node.\n",
+    "\n",
     "class Solution:\n",
-    "    def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':\n",
-    "        curr = root\n",
-    "        while curr:\n",
-    "            if p.val > curr.val and q.val > curr.val:\n",
-    "                curr = curr.right\n",
-    "            elif p.val < curr.val and q.val < curr.val:\n",
-    "                curr = curr.left\n",
-    "            else:\n",
-    "                return curr\n",
-    "       "
+    "    def isBalanced(self, root: Optional[TreeNode]) -> bool:\n",
+    "\n",
+    "        def dfs(root): # recursive dfs that returns a pair (bool, height)\n",
+    "            if not root:\n",
+    "                return 0\n",
+    "            \n",
+    "            left, right = dfs(root.left), dfs(root.right)\n",
+    "            balanced = left[0] and right[0] and abs(left[1] - right[1]) <= 1\n",
+    "            return [balanced, 1 + max(left[1], right[1])]\n",
+    "\n",
+    "        return dfs(root)[0]\n",
+    "\n",
+    "            "
    ]
   }
  ],
