--- a/08_Tries/211.ipynb
+++ b/08_Tries/211.ipynb
@@ -48,7 +48,7 @@
     "                    cur = cur.children[c]\n",
     "            return cur.word\n",
     "\n",
-    "        return dfs(0, self.root)\n"
+    "        return dfs(0, self.root)"
    ]
   }
  ],
