--- a/09_Heap/215.ipynb
+++ b/09_Heap/215.ipynb
@@ -28,6 +28,7 @@
     "#   - Average Case: O(n*log(n))\n",
     "#   - Worst Case:O(n*log(n))\n",
     "# Extra Space Complexity: O(n)\n",
+    "\n",
     "class Solution1:\n",
     "    def findKthLargest(self, nums: List[int], k: int) -> int:\n",
     "        nums.sort()\n",
@@ -77,6 +78,29 @@
     "                break\n",
     "\n",
     "        return nums[k]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution: Heap\n",
+    "\n",
+    "class KthLargest:\n",
+    "    def __init__(self, k: int, nums: List[int]):\n",
+    "        # minHeap w/ K largest integers\n",
+    "        self.minHeap, self.k = nums, k\n",
+    "        heapq.heapify(self.minHeap)\n",
+    "        while len(self.minHeap) > k:\n",
+    "            heapq.heappop(self.minHeap)\n",
+    "\n",
+    "    def add(self, val: int) -> int:\n",
+    "        heapq.heappush(self.minHeap, val)\n",
+    "        if len(self.minHeap) > self.k:\n",
+    "            heapq.heappop(self.minHeap)\n",
+    "        return self.minHeap[0]"
    ]
   }
  ],
