--- a/06_LinkedList/287.ipynb
+++ b/06_LinkedList/287.ipynb
@@ -4,53 +4,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://i.imgur.com/3YIFglI.png)"
+    "![](https://i.imgur.com/PkLwut9.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List, Tuple, Dict, Set, Optional\n",
-    "import collections"
+    "from typing import List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Definition for a binary tree node.\n",
-    "class TreeNode:\n",
-    "    def __init__(self, val=0, left=None, right=None):\n",
-    "        self.val = val\n",
-    "        self.left = left\n",
-    "        self.right = right"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def isValidBST(self, root: Optional[TreeNode]) -> bool:\n",
+    "    def findDuplicate(self, nums: List[int]) -> int:\n",
+    "        # sort the list\n",
+    "        nums.sort()\n",
     "\n",
-    "        def valid(node, left, right):\n",
-    "            if not node:\n",
-    "                return True\n",
-    "            if not (node.val < right and node.val > left):\n",
-    "                return False\n",
+    "        for i in range(1, len(nums)):\n",
+    "            if nums[i] == nums[i-1]:\n",
+    "                return nums[i]\n",
     "\n",
-    "            return valid(node.left, left, node.val) and valid(\n",
-    "                node.right, node.val, right\n",
-    "            )\n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findDuplicate(self, nums: List[int]) -> int:\n",
+    "        slow, fast = 0, 0\n",
+    "        while True:\n",
+    "            slow = nums[slow]\n",
+    "            fast = nums[nums[fast]]\n",
+    "            if slow == fast:\n",
+    "                break\n",
     "\n",
-    "        return valid(root, float('-inf'), float('inf'))\n"
+    "        slow2 = 0\n",
+    "        while True:\n",
+    "            slow = nums[slow]\n",
+    "            slow2 = nums[slow2]\n",
+    "            if slow == slow2:\n",
+    "                return slow"
    ]
   }
  ],
