--- a/07_Trees/543.ipynb
+++ b/07_Trees/543.ipynb
@@ -4,16 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://i.imgur.com/Vy27xdQ.png)"
+    "![](https://i.imgur.com/VMgMTdE.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definition for a binary tree node.\n",
+    "from typing import Optional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class TreeNode:\n",
     "    def __init__(self, val=0, left=None, right=None):\n",
     "        self.val = val\n",
@@ -23,21 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':\n",
-    "        curr = root\n",
-    "        while curr:\n",
-    "            if p.val > curr.val and q.val > curr.val:\n",
-    "                curr = curr.right\n",
-    "            elif p.val < curr.val and q.val < curr.val:\n",
-    "                curr = curr.left\n",
-    "            else:\n",
-    "                return curr\n",
-    "       "
+    "    def diameterOfBinaryTree(self, root: Optional[TreeNode]) -> int:\n",
+    "        res = 0\n",
+    "\n",
+    "        def dfs(root):\n",
+    "            nonlocal res\n",
+    "\n",
+    "            if not root:\n",
+    "                return 0\n",
+    "            \n",
+    "            left = dfs(root.left)\n",
+    "            right = dfs(root.right)\n",
+    "            res = max(res, left+right)\n",
+    "\n",
+    "            return 1 + max(left, right)\n",
+    "        \n",
+    "        dfs(root)\n",
+    "        return res\n"
    ]
   }
  ],
