--- a/09_Heap/1046.ipynb
+++ b/09_Heap/1046.ipynb
@@ -31,19 +31,21 @@
     }
    ],
    "source": [
+    "# Solution using a MaxHeap, every time that we need to take the max element, it;s O(logn) and we do it n times, so the complexity is O(nlogn)\n",
+    "\n",
     "class Solution:\n",
     "    def lastStoneWeight(self, stones: List[int]) -> int:\n",
-    "        stones = [-s for s in stones]\n",
-    "        heapq.heapify(stones)\n",
+    "        stones = [-s for s in stones] # trick to use a max heap since heapq only supports min heaps\n",
+    "        heapq.heapify(stones) # O(len(stones)) in time\n",
     "\n",
-    "        while len(stones) > 1:\n",
+    "        while len(stones) > 1: \n",
     "            first = heapq.heappop(stones)\n",
     "            second = heapq.heappop(stones)\n",
-    "            if second > first:\n",
+    "            if second > first: ## attention to the sign, we are using a max heap\n",
     "                heapq.heappush(stones, first - second)\n",
     "\n",
-    "        stones.append(0)\n",
-    "        return abs(stones[0])\n",
+    "        stones.append(0) # edge case: what if stone was empty?\n",
+    "        return abs(stones[0]) # we need to go back to natural numbers\n",
     "    "
    ]
   }
@@ -69,7 +71,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
