--- a/09_Heap/215.ipynb
+++ b/09_Heap/215.ipynb
@@ -9,16 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List"
+    "from typing import List\n",
+    "import heapq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +33,22 @@
     "class Solution1:\n",
     "    def findKthLargest(self, nums: List[int], k: int) -> int:\n",
     "        nums.sort()\n",
-    "        return nums[len(nums) - k]\n",
-    "\n",
-    "        k = len(nums) - k"
+    "        return nums[len(nums)-k]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Solution: QuickSelect\n",
     "# Time Complexity: \n",
@@ -79,29 +86,6 @@
     "\n",
     "        return nums[k]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution: Heap\n",
-    "\n",
-    "class KthLargest:\n",
-    "    def __init__(self, k: int, nums: List[int]):\n",
-    "        # minHeap w/ K largest integers\n",
-    "        self.minHeap, self.k = nums, k\n",
-    "        heapq.heapify(self.minHeap)\n",
-    "        while len(self.minHeap) > k:\n",
-    "            heapq.heappop(self.minHeap)\n",
-    "\n",
-    "    def add(self, val: int) -> int:\n",
-    "        heapq.heappush(self.minHeap, val)\n",
-    "        if len(self.minHeap) > self.k:\n",
-    "            heapq.heappop(self.minHeap)\n",
-    "        return self.minHeap[0]"
-   ]
   }
  ],
  "metadata": {
@@ -125,7 +109,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
