--- a/09_Heap/973.ipynb
+++ b/09_Heap/973.ipynb
@@ -4,41 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://i.imgur.com/XbAJpCM.png)"
+    "![](https://i.imgur.com/jChyUlr.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class UnionFind:\n",
-    "    def __init__(self):\n",
-    "        self.f = {}\n",
-    "\n",
-    "    def findParent(self, x):\n",
-    "        y = self.f.get(x, x)\n",
-    "        if x != y:\n",
-    "            y = self.f[x] = self.findParent(y)\n",
-    "        return y\n",
-    "\n",
-    "    def union(self, x, y):\n",
-    "        self.f[self.findParent(x)] = self.findParent(y)"
+    "from math import hypot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def countComponents(self, n: int, edges: List[List[int]]) -> int:\n",
-    "        dsu = UnionFind()\n",
-    "        for a, b in edges:\n",
-    "            dsu.union(a, b)\n",
-    "        return len(set(dsu.findParent(x) for x in range(n)))"
+    "    def kClosest(self, points: List[List[int]], k: int) -> List[List[int]]:\n",
+    "        \n",
+    "        def EuclideanDistance(point, point2):\n",
+    "            return hypot(point[0] - point2[0], point[1] - point2[1]) # it's a bit overkill to use hypot here, but it's a good practice\n",
+    "\n",
+    "        pts = []\n",
+    "        for point in points:\n",
+    "            pts.append((EuclideanDistance(point, [0, 0]), point))\n",
+    "        pts.sort(key=lambda x: x[0])\n",
+    "\n",
+    "        return [point for _, point in pts[:k]]"
    ]
   }
  ],
