--- a/11_Graphs/200.ipynb
+++ b/11_Graphs/200.ipynb
@@ -33,23 +33,23 @@
     "\n",
     "        def dfs(r, c):\n",
     "            if (\n",
-    "                r not in range(rows)\n",
-    "                or c not in range(cols)\n",
-    "                or grid[r][c] == \"0\"\n",
-    "                or (r, c) in visit\n",
+    "                r not in range(rows) # row out of bounds\n",
+    "                or c not in range(cols) # col out of bounds\n",
+    "                or grid[r][c] == \"0\" # water\n",
+    "                or (r, c) in visit # already visited\n",
     "            ):\n",
     "                return\n",
     "\n",
-    "            visit.add((r, c))\n",
-    "            directions = [[0, 1], [0, -1], [1, 0], [-1, 0]]\n",
-    "            for dr, dc in directions:\n",
+    "            visit.add((r, c)) # mark as visited\n",
+    "            directions = [[0, 1], [0, -1], [1, 0], [-1, 0]]  # right, left, down, up\n",
+    "            for dr, dc in directions: # explore all directions\n",
     "                dfs(r + dr, c + dc)\n",
     "\n",
     "        for r in range(rows):\n",
     "            for c in range(cols):\n",
-    "                if grid[r][c] == \"1\" and (r, c) not in visit:\n",
-    "                    islands += 1\n",
-    "                    dfs(r, c)\n",
+    "                if grid[r][c] == \"1\" and (r, c) not in visit: # land and not visited\n",
+    "                    islands += 1 # found new island\n",
+    "                    dfs(r, c) # explore island\n",
     "        return islands"
    ]
   }
@@ -75,7 +75,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
