--- a/11_Graphs/207.ipynb
+++ b/11_Graphs/207.ipynb
@@ -27,25 +27,25 @@
     "        preMap = {i: [] for i in range(numCourses)} # map each course to its prerequisites\n",
     "\n",
     "        for crs,pre in prerequisites:\n",
-    "            preMap[crs].append(pre)\n",
+    "            preMap[crs].append(pre) # add the prerequisite to the course\n",
     "\n",
     "        visiting = set() # visiting set to keep track of courses that are being visited\n",
     "\n",
     "        def dfs(crs):\n",
-    "            if crs in visiting:\n",
+    "            if crs in visiting: # if the course is already being visited, then there is a cycle\n",
     "                return False\n",
-    "            if preMap[crs] == []:\n",
+    "            if preMap[crs] == []: # if the course has no prerequisites, then it is a leaf node\n",
     "                return True\n",
     "\n",
-    "            visiting.add(crs)\n",
-    "            for pre in preMap[crs]:\n",
-    "                if not dfs(pre):\n",
+    "            visiting.add(crs) # add the course to the visiting set\n",
+    "            for pre in preMap[crs]: # for each prerequisite of the course\n",
+    "                if not dfs(pre): # if the prerequisite is not a leaf node, then there is a cycle\n",
     "                    return False \n",
-    "            visiting.remove(crs)\n",
-    "            preMap[crs] = []\n",
+    "            visiting.remove(crs)  # remove the course from the visiting set\n",
+    "            preMap[crs] = []  # remove the course from the map\n",
     "            return True\n",
     "\n",
-    "        for c in range(numCourses): # the reason we loop through all courses is becouse we don't know if the graph i connected or not\n",
+    "        for c in range(numCourses): # the reason we loop through all courses is because we don't know if the graph is connected or not\n",
     "            if not dfs(c):\n",
     "                return False\n",
     "        return True"
@@ -73,7 +73,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
