new and revised problems

--- a/12_Dynamic_Programmig/5.ipynb
+++ b/12_Dynamic_Programmig/5.ipynb
@@ -18,28 +18,28 @@
     "        res = \"\"\n",
     "        resLen = 0\n",
     "\n",
-    "        for i in range(len(s)):\n",
-    "            # odd case, like \"aba\"\n",
-    "            l, r = i, i # center position\n",
+    "        for  i in range(len(s)):\n",
+    "            # odd case\n",
+    "            l, r = i, i # start from the center\n",
     "            while l >= 0 and r < len(s) and s[l] == s[r]:\n",
-    "                if (r-l+1) > resLen:\n",
-    "                    res = s[l : r+1]\n",
-    "                    resLen = r-l+1\n",
+    "                # where are starting from a point, and expanding left and right. In the while loop I am checking if I am in bounds and if it is still a palindrome\n",
+    "                if (r - l + 1) > resLen: # we have a new longest palindrome\n",
+    "                    res = s[l:r+1]\n",
+    "                    resLen = r - l +1\n",
+    "                # don't forget to expand our pointers outwards\n",
     "                l -= 1\n",
     "                r += 1\n",
     "\n",
-    "            # even lenght\n",
-    "            l, r = i, i+1 # center position\n",
-    "            while l >= 0 and r < len(s) and s[l] == s[r]:\n",
-    "                if (r - l +1) > resLen:\n",
-    "                    res = s[l : r+1]\n",
-    "                    resLen = r - l + 1\n",
-    "                l-= 1\n",
-    "                l+= 1\n",
+    "                # even case, same as before but with the different r\n",
+    "                l, r = i, i+1\n",
+    "                while l >= 0 and r<len(s) and s[l] == s[r]:\n",
+    "                    if (r - l + 1) > resLen:\n",
+    "                        res = s[l:r+1]\n",
+    "                        resLen = r - l +1 \n",
+    "                    l -= 1\n",
+    "                    r += 1\n",
     "\n",
-    "        return res\n",
-    "\n",
-    "        "
+    "            return res"
    ]
   }
  ],
@@ -64,7 +64,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
