--- a/12_Dynamic_Programmig/139.ipynb
+++ b/12_Dynamic_Programmig/139.ipynb
@@ -17,14 +17,14 @@
     "    def wordBreak(self, s: str, wordDict: List[str]) -> bool:\n",
     "        \n",
     "        dp = [False] * (len(s) + 1) # cache\n",
-    "        dp[len(s)] = True\n",
+    "        dp[len(s)] = True \n",
     "\n",
-    "        for i in range(len(s) -1, -1, -1): \n",
-    "            for w in wordDict:\n",
-    "                if (i+len(w)) <= len(s) and s[i:i+len(w)] == w:\n",
-    "                    dp[i] = dp[i+len(w)]\n",
-    "                if dp[i]:\n",
-    "                    break\n",
+    "        for i in range(len(s) -1, -1, -1): # from right to left\n",
+    "            for w in wordDict: # check all words\n",
+    "                if (i+len(w)) <= len(s) and s[i:i+len(w)] == w: # if match \n",
+    "                    dp[i] = dp[i+len(w)] # update cache\n",
+    "                if dp[i]: # if match, break\n",
+    "                    break \n",
     "        return dp[0]"
    ]
   }
