--- a/12_Dynamic_Programmig/322.ipynb
+++ b/12_Dynamic_Programmig/322.ipynb
@@ -9,49 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import List"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
     "    def coinChange(self, coins: List[int], amount: int) -> int:\n",
-    "        dp = [amount + 1] * (amount + 1)\n",
-    "        dp[0] = 0\n",
+    "        # bottom up approach: what is the minimum number of coins for us to sum amount?\n",
     "\n",
-    "        for a in range(1, amount + 1):\n",
-    "            for c in coins:\n",
-    "                if a - c >= 0:\n",
-    "                    dp[a] = min(dp[a], 1 + dp[a - c])\n",
-    "        return dp[amount] if dp[amount] != amount + 1 else -1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "coins = [1,2,5]\n",
-    "amount = 11\n",
+    "        dp = [amount + 1] * (amount + 1) # we can do infinity or the max, it does not matter\n",
+    "        dp[0] = 0 # base case, zero coins\n",
     "\n",
-    "print(Solution().coinChange(coins, amount))"
+    "        for a in range(1, amount + 1): # reverse order, from 1 to the amount\n",
+    "            for c in coins: \n",
+    "                if a - c >= 0: # we can continue searching, we may have found a solution\n",
+    "                    dp[a] = min(dp[a], 1 + dp[a - c]) # this is a possibile solution\n",
+    "            # this is a recurrent solution approach\n",
+    "        return dp[amount] if dp[amount] != amount + 1 else -1 # it can't be the default value\n",
+    "\n",
+    "# O(amount * len(coins)) in time\n",
+    "# O(amount) in memory"
    ]
   }
  ],
