--- a/12_Dynamic_Programmig/647.ipynb
+++ b/12_Dynamic_Programmig/647.ipynb
@@ -18,8 +18,8 @@
     "        res = 0\n",
     "\n",
     "        for i in range(len(s)):\n",
-    "            res += self.countPali(s, i, i)\n",
-    "            res += self.countPali(s, i, i + 1)\n",
+    "            res += self.countPali(s, i, i) # even ones\n",
+    "            res += self.countPali(s, i, i + 1) #odd ones\n",
     "        return res\n",
     "\n",
     "    def countPali(self, s, l, r):\n",
@@ -53,7 +53,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
