new problems and new folder for 2D dp

--- a/12_Dynamic_Programmig/1-Dimensional/300.ipynb
+++ b/12_Dynamic_Programmig/1-Dimensional/300.ipynb
@@ -17,10 +17,10 @@
     "    def lengthOfLIS(self, nums: List[int]) -> int:\n",
     "        LIS = [1] * len(nums)\n",
     "\n",
-    "        for i in range(len(nums) - 1, -1, -1):\n",
-    "            for j in range(i + 1, len(nums)):\n",
-    "                if nums[i] < nums[j]:\n",
-    "                    LIS[i] = max(LIS[i], 1 + LIS[j])\n",
+    "        for i in range(len(nums) - 1, -1, -1): # loop from the end\n",
+    "            for j in range(i + 1, len(nums)): # loop from i + 1 to the end\n",
+    "                if nums[i] < nums[j]: \n",
+    "                    LIS[i] = max(LIS[i], 1 + LIS[j]) # update LIS[i] if needed\n",
     "        return max(LIS)"
    ]
   },
@@ -32,7 +32,6 @@
    "source": [
     "# greedy, with binary search\n",
     "from bisect import bisect_left\n",
-    "\n",
     "\n",
     "class Solution:  \n",
     "    def lengthOfLIS(self, nums: List[int]) -> int:\n",
@@ -60,7 +59,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
