--- a/01_Array_and_Ashing/49.ipynb
+++ b/01_Array_and_Ashing/49.ipynb
@@ -36,17 +36,36 @@
     "        \n",
     "        return res.values()\n",
     "\n",
-    "        # O(m*n) time, O(m) space\n",
-    "                \n",
-    "                \n",
+    "        # O(m*n) time, O(m) space       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def groupAnagrams(self, strs: List[str]) -> List[List[str]]:\n",
+    "        \n",
+    "        for word in strs: # O(n log n)\n",
+    "            word = sorted(word)\n",
+    "            \n",
+    "        # now the words are singolar sorted. Let's check if there are equal words\n",
+    "        res  = []\n",
+    "        for word in strs:\n",
+    "            tmp = []\n",
+    "            tmp.append(word)\n",
+    "            \n",
     "\n",
-    "        "
+    "            \n",
+    "            "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -60,12 +79,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
