--- a/04_Stack/84.ipynb
+++ b/04_Stack/84.ipynb
@@ -27,16 +27,16 @@
     "        stack = [] # (index, height)\n",
     "        max_area = 0\n",
     "\n",
-    "        for i, h in enumerate(heights):\n",
-    "            start = i\n",
-    "            while stack and stack[-1][1] > h:\n",
-    "                index, height = stack.pop()\n",
-    "                max_area = max(max_area, (i - index) * height)\n",
-    "                start = index\n",
-    "            stack.append((start, h))\n",
+    "        for i, h in enumerate(heights): # loop through all heights\n",
+    "            start = i # start index of current height\n",
+    "            while stack and stack[-1][1] > h: # if stack is not empty and top height is larger than current height\n",
+    "                index, height = stack.pop() # pop the top height and its index from stack since it is no longer useful\n",
+    "                max_area = max(max_area, (i - index) * height) # calculate the area of the rectangle with top height\n",
+    "                start = index # update start index of current height\n",
+    "            stack.append((start, h)) # push current height and its start index to stack \n",
     "\n",
     "        for i,h in stack:\n",
-    "            max_area = max(max_area, (len(heights) - i) * h)\n",
+    "            max_area = max(max_area, (len(heights) - i) * h) # calculate the area of the rectangle with top height in stack\n",
     "        \n",
     "        return max_area     "
    ]
@@ -58,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
