some fixes to the problems

--- a/03_Sliding_Window/424.ipynb
+++ b/03_Sliding_Window/424.ipynb
@@ -57,6 +57,34 @@
     "        return res\n",
     " \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AA'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "s = \"ABAB\"\n",
+    "count = Counter(s)\n",
+    "\n",
+    "f = \"AACBB\"\n",
+    "count1 = Counter(f)\n",
+    "\n",
+    "f[0:2]"
+   ]
   }
  ],
  "metadata": {
@@ -66,8 +94,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
