--- a/03_Sliding_Window/567.ipynb
+++ b/03_Sliding_Window/567.ipynb
@@ -46,8 +46,33 @@
     "            elif s1Count[index] - 1 == s2Count[index]:\n",
     "                matches -= 1\n",
     "            l += 1\n",
-    "        return matches == 26\n",
-    "\n"
+    "        return matches == 26"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def checkInclusion(self, s1: str, s2: str) -> bool:\n",
+    "        \n",
+    "        count = Counter(s1)\n",
+    "        n = len(s1)\n",
+    "        \n",
+    "        l = 0\n",
+    "        \n",
+    "        while l <= len(s2)-n:\n",
+    "            tmp = Counter(s2[l:l+n])\n",
+    "            \n",
+    "            if count == tmp:\n",
+    "                return True\n",
+    "            \n",
+    "            l += 1\n",
+    "            \n",
+    "        return False\n",
+    "            "
    ]
   }
  ],
@@ -67,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
