--- a/03_Sliding_Window/76.ipynb
+++ b/03_Sliding_Window/76.ipynb
@@ -24,44 +24,38 @@
    "source": [
     "class Solution:\n",
     "    def minWindow(self, s: str, t: str) -> str:\n",
-    "        t_counter = Counter(t)\n",
-    "        s_counter = Counter()\n",
-    "        l = r = 0\n",
-    "        min_len = float('inf')\n",
-    "        res = ''\n",
+    "        if t == \"\":\n",
+    "            return \"\"\n",
     "\n",
-    "        while r < len(s):\n",
-    "            s_counter[s[r]] += 1\n",
-    "            r += 1\n",
-    "            while s_counter & t_counter == t_counter:\n",
-    "                if r - l < min_len:\n",
-    "                    min_len = r - l\n",
-    "                    res = s[l:r]\n",
-    "                s_counter[s[l]] -= 1\n",
+    "        countT, window = {}, {} # countT: count of each char in t, window: count of each char in window\n",
+    "\n",
+    "        # init countT \n",
+    "        for c in t:\n",
+    "            countT[c] = 1 + countT.get(c, 0) # \n",
+    "\n",
+    "        have, need = 0, len(countT) # have: number of chars in window that are in t, need: number of chars in t\n",
+    "        res, resLen = [-1, -1], float(\"infinity\") # res: start and end index of result, resLen: length of result\n",
+    "        l = 0 # left pointer of window\n",
+    "\n",
+    "        for r in range(len(s)): \n",
+    "            c = s[r]\n",
+    "            window[c] = 1 + window.get(c, 0) # add c to window \n",
+    "\n",
+    "            if c in countT and window[c] == countT[c]: # if c is in t and c's count in window equals to c's count in t \n",
+    "                have += 1 \n",
+    "\n",
+    "            while have == need: # if all chars in t are in window\n",
+    "                # update our result\n",
+    "                if (r - l + 1) < resLen: \n",
+    "                    res = [l, r] \n",
+    "                    resLen = r - l + 1\n",
+    "                # pop from the left of our window\n",
+    "                window[s[l]] -= 1\n",
+    "                if s[l] in countT and window[s[l]] < countT[s[l]]:\n",
+    "                    have -= 1\n",
     "                l += 1\n",
-    "        return res\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'BANC'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s = \"ADOBECODEBANC\"\n",
-    "t = \"ABC\"\n",
-    "Solution().minWindow(s, t)"
+    "        l, r = res\n",
+    "        return s[l : r + 1] if resLen != float(\"infinity\") else \"\""
    ]
   }
  ],
@@ -81,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
