how to approach problems [sketch]

--- a/04_Stack/20.ipynb
+++ b/04_Stack/20.ipynb
@@ -14,21 +14,19 @@
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def isValid(self, s: str) -> bool: # O(n) in space e memory\n",
-    "        stack = []\n",
-    "        map = {')':'(',']':'[','}':'{'}\n",
+    "    def isValid(self, s: str) -> bool:\n",
+    "        Map = {\")\": \"(\", \"]\": \"[\", \"}\": \"{\"} # contains the closing brackets and their corresponding opening brackets\n",
+    "        stack = [] # stack to store the opening brackets\n",
     "\n",
     "        for c in s:\n",
-    "            if c not in map: # so it's a opening parenthesis\n",
+    "            if c not in Map:  # if the current character is an opening bracket, push it onto the stack\n",
     "                stack.append(c)\n",
     "                continue\n",
-    "            if not stack and stack[-1] != map[c]: # there is no closing match to a parenthesis\n",
-    "                return False\n",
-    "            stack.pop()\n",
-    "\n",
-    "        return not stack\n",
-    "\n",
-    "\n"
+    "            if not stack or stack[-1] != Map[c]: # if the current character is a closing bracket, check if the stack is empty or the top of the stack is not the corresponding opening bracket\n",
+    "                return False # if the stack is empty or the top of the stack is not the corresponding opening bracket, return False\n",
+    "            stack.pop() # if the top of the stack is the corresponding opening bracket, pop it off the stack\n",
+    " \n",
+    "        return not stack # if the stack is empty, return True, otherwise return False"
    ]
   }
  ],
@@ -48,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
