new problems and some old fixes

--- a/07_Trees/102.ipynb
+++ b/07_Trees/102.ipynb
@@ -47,14 +47,14 @@
     "        while q:\n",
     "            val = []\n",
     "\n",
-    "            for i in range(len(q)):\n",
-    "                node = q.popleft()\n",
-    "                val.append(node.val)\n",
-    "                if node.left:\n",
-    "                    q.append(node.left)\n",
-    "                if node.right:\n",
+    "            for i in range(len(q)): # len(q) is changing and it rappresents the number of nodes in the current level\n",
+    "                node = q.popleft() # pop the first node in the queue that rappresents the first node in the current level from left to right\n",
+    "                val.append(node.val) # append the value of the node to the list of values of the current level\n",
+    "                if node.left: # if the node has a left child, append it to the queue\n",
+    "                    q.append(node.left) \n",
+    "                if node.right: # if the node has a right child, append it to the queue\n",
     "                    q.append(node.right)\n",
-    "            res.append(val)\n",
+    "            res.append(val) # append the list of values of the current level to the list of lists of values of the tree\n",
     "        return res"
    ]
   }
