--- a/07_Trees/105.ipynb
+++ b/07_Trees/105.ipynb
@@ -4,22 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://i.imgur.com/3YIFglI.png)"
+    "![](https://i.imgur.com/wjsmoyQ.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import List, Tuple, Dict, Set, Optional\n",
-    "import collections"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,23 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def isValidBST(self, root: Optional[TreeNode]) -> bool:\n",
+    "    def buildTree(self, preorder: List[int], inorder: List[int]) -> Optional[TreeNode]:\n",
+    "        if not preorder or not inorder:\n",
+    "            return None\n",
     "\n",
-    "        def valid(node, left, right): # left, right are the bounds\n",
-    "            if not node: \n",
-    "                return True\n",
-    "            if not (node.val < right and node.val > left): # if the node is not in the bounds\n",
-    "                return False\n",
+    "        root = TreeNode(preorder[0]) # the first element in preorder is the root\n",
+    "        i = inorder.index(preorder[0]) # find the root in inorder\n",
     "\n",
-    "            # check the left and right subtrees with the new bounds\n",
-    "            return valid(node.left, left, node.val) and valid(node.right, node.val, right)\n",
-    "\n",
-    "        return valid(root, float('-inf'), float('inf')) # start with the bounds of the whole tree\n"
+    "        root.left = self.buildTree(preorder[1:i+1], inorder[:i]) # build left subtree recursively using the left part of inorder\n",
+    "        root.right = self.buildTree(preorder[i+1:], inorder[i+1:]) # build right subtree recursively using the right part of inorder\n",
+    "        return root"
    ]
   }
  ],
