--- a/07_Trees/572.ipynb
+++ b/07_Trees/572.ipynb
@@ -32,30 +32,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def isSubtree(self, p: TreeNode, q:TreeNode) -> bool:\n",
-    "        if not p:\n",
+    "    def isSubtree(self, root: Optional[TreeNode], subRoot: Optional[TreeNode]) -> bool:\n",
+    "\n",
+    "        def isSameTree(p, q) -> bool:\n",
+    "            if not p and not q:\n",
+    "                return True\n",
+    "            if p and q and p.val == q.val:\n",
+    "                return isSameTree(p.left, q.left) and isSameTree(p.right, q.right)\n",
+    "            else:\n",
+    "                return False\n",
+    "\n",
+    "        if not root:\n",
     "            return False\n",
-    "        if not q:\n",
+    "        if not subRoot:\n",
     "            return True\n",
     "\n",
-    "        if self.isSameTree(p, q):\n",
+    "        if isSameTree(root, subRoot):\n",
     "            return True\n",
-    "        return self.isSubtree(p.left, q) or self.isSubtree(p.right, q)\n",
-    "\n",
-    "        \n",
-    "\n",
-    "    def isSameTree(self, p, q) -> bool:\n",
-    "        if not p and not q:\n",
-    "            return True\n",
-    "        if p and q and p.val == q.val:\n",
-    "            return self.isSameTree(p.left, q.left) and self.isSameTree(p.right, q.right)\n",
-    "        else:\n",
-    "            return False        "
+    "        return self.isSubtree(root.left, subRoot) or self.isSubtree(root.right, subRoot)"
    ]
   }
  ],
@@ -80,7 +79,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
