--- a/07_Trees/235.ipynb
+++ b/07_Trees/235.ipynb
@@ -29,15 +29,12 @@
    "source": [
     "class Solution:\n",
     "    def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':\n",
-    "        curr = root\n",
-    "        while curr:\n",
-    "            if p.val > curr.val and q.val > curr.val:\n",
-    "                curr = curr.right\n",
-    "            elif p.val < curr.val and q.val < curr.val:\n",
-    "                curr = curr.left\n",
-    "            else:\n",
-    "                return curr\n",
-    "       "
+    "        if root.val > p.val and root.val > q.val:\n",
+    "            return self.lowestCommonAncestor(root.left, p, q)\n",
+    "        elif root.val < p.val and root.val < q.val:\n",
+    "            return self.lowestCommonAncestor(root.right, p, q)\n",
+    "        else:\n",
+    "            return root"
    ]
   }
  ],
